# lib-stp

./: CMakeLists.txt  LICENSE.md
src/: CMakeLists.txt
src/logger/: logger.h
tests/: CMakeLists.txt  boost_opencv_include_test.cpp
